@@ -11,6 +11,16 @@
       android:title="@string/preferences_media_path_title"
       android:summary="@string/preferences_media_path_summary"
       android:defaultValue="/sdcard/mod" />
+      
+    <ListPreference
+      android:key="vol_boost"
+      android:persistent="true"
+      android:title="@string/preferences_vol_boost_title"
+      android:summary="@string/preferences_vol_boost_summary"
+      android:defaultValue="1"
+      android:entries="@array/vol_boost_array"
+      android:entryValues="@array/vol_boost_values" />
+      
   </PreferenceCategory>
 
 </PreferenceScreen>
